Cria e modifica páginas para atividade 3
Cria a pagina atividade 3 cumprindo os requisitos da atividade (titulo, fav icon, links, img dinamica) e modifica o index para conseguir redirecionar para a pagina da atividade 3

--- a/front end/index.html
+++ b/front end/index.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     <h1>Hello World</h1>
+
+    <h2>Atividade 3</h2>
+    <p>Esta atividade demonstra o uso da tag de âncora para vincular uma página a outra.</p>
+    <a href="pages/Atividade 3/atividade-3.html">Clique aqui para ir para a Atividade 03</a>
 </body>
 </html>
