Adiciona pagina atividade 4 e adiciona estilo para o index
adiciona a pagina atividade-4 para adicionar audio e video a uma pagina, além disso adiciona um estilo css ao index

--- a/front end/index.html
+++ b/front end/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style/style.css">
+
     <title>Hello World</title>
 </head>
 <body>
@@ -11,5 +13,9 @@
     <h2>Atividade 3</h2>
     <p>Esta atividade demonstra o uso da tag de âncora para vincular uma página a outra.</p>
     <a href="pages/Atividade 3/atividade-3.html">Clique aqui para ir para a Atividade 03</a>
+
+    <h2>Atividade 4</h2>
+    <p>Esta atividade demonstra o uso das tags relacionadas a audio e video</p>
+    <a href="pages/Atividade 4/atividade-4.html">Clique aqui para ir para a Atividade 04</a>
 </body>
 </html>
