Definir paleta de cores do site
Criado uma pagina que contém a paleta de cores que será usada no site alem de um css que aplique essas cores

--- a/front end/index.html
+++ b/front end/index.html
@@ -17,5 +17,9 @@
     <h2>Atividade 4</h2>
     <p>Esta atividade demonstra o uso das tags relacionadas a audio e video</p>
     <a href="pages/Atividade 4/atividade-4.html">Clique aqui para ir para a Atividade 04</a>
+
+    <h2>Atividade 5</h2>
+    <p>Esta atividade tem como objetivo definir uma paleta de cores para o site.</p>
+    <a href="pages/Atividade 5/atividade-5.html">Clique aqui para ir para a Atividade 05</a>
 </body>
 </html>
