Adicionando Bootstrap ao projeto
adicionando uma página que use bootstrap e definindo melhor qual vai ser o tema da pagina

--- a/front end/index.html
+++ b/front end/index.html
@@ -21,5 +21,9 @@
     <h2>Atividade 5</h2>
     <p>Esta atividade tem como objetivo definir uma paleta de cores para o site.</p>
     <a href="pages/Atividade 5/atividade-5.html">Clique aqui para ir para a Atividade 05</a>
+
+    <h2>Atividade 10</h2>
+    <p>Pagina teste para usar o bootstrap.</p>
+    <a href="pages/Atividade 10/atividade-10.html">Clique aqui para ir para a Atividade 10</a>
 </body>
 </html>
