--- a/front end/pages/Atividade 10/atividade-10.html
+++ b/front end/pages/Atividade 10/atividade-10.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 
+    <link rel="stylesheet" href="style.css">
+
     <title> Bootstrap </title>
 </head>
 <body>
@@ -70,10 +72,15 @@
 
         <div class="row"> <!-- estoria 1 -->
             <p class="lead"> O anime moderno, como o conhecemos hoje, começou a ganhar forma nas décadas de 1950 e 1960. Nessa época, o Japão passou por uma transformação econômica e cultural que ajudou a solidificar a animação como uma indústria significativa. <br><br>
+
             Foi durante esse período que a animação no Japão começou a se distanciar das influências ocidentais e desenvolver uma identidade própria. <br><br>
-            O grande marco para o anime moderno foi a criação de Astro Boy (Tetsuwan Atom), em 1963. Criado por Osamu Tezuka, considerado o “Deus do Mangá”, Astro Boy foi a primeira série de anime que alcançou uma popularidade nacional e estabeleceu os padrões de animação e narrativa que seriam seguidos por muitas produções posteriores.<br> <br>
-            A história de Astro Boy, que contava as aventuras de um robô com aparência humana, abordou temas de moralidade, humanidade e ética, tornando-se um sucesso tanto entre os jovens quanto os adultos.<br> <br>
-            Tezuka foi fundamental na criação do estilo visual do anime, com os olhos grandes, as expressões exageradas e as linhas simples, que se tornaram marca registrada das animações japonesas.<br><br>
+
+            O grande marco para o anime moderno foi a criação de Astro Boy (Tetsuwan Atom), em 1963. Criado por Osamu Tezuka, considerado o “Deus do Mangá”, Astro Boy foi a primeira série de anime que alcançou uma popularidade nacional e estabeleceu os padrões de animação e narrativa que seriam seguidos por muitas produções posteriores. <br><br>
+
+            A história de Astro Boy, que contava as aventuras de um robô com aparência humana, abordou temas de moralidade, humanidade e ética, tornando-se um sucesso tanto entre os jovens quanto os adultos. <br><br>
+
+            Tezuka foi fundamental na criação do estilo visual do anime, com os olhos grandes, as expressões exageradas e as linhas simples, que se tornaram marca registrada das animações japonesas. <br><br>
+
             A popularidade de Astro Boy também levou à criação de outros animes de sucesso, como Kimba, o Leão Branco, e ajudou a definir o que viria a ser o “anime clássico” da década de 1960.</p>
         </div>
 
