Atualizar paginas de Animes
Definido melhor o tema do site e adicionando uma pagina propria para os animes.

--- a/front end/index.html
+++ b/front end/index.html
@@ -22,14 +22,26 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
             <ul class="navbar-nav ms-auto">
+                <!-- pagina sobre animes -->
                 <li class="nav-item">
-                    <a href="index.html" class="nav-link">Home</a>
+                    <a href="./pages/Animes/animes.html " class="nav-link">Animes</a>
                 </li>
 
-
+                <!-- pagina sobre as animações e estudios -->
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Sobre</a>
+                    <a href="./pages/Animacoes/animacoes.html" class="nav-link">Animações</a>
                 </li>
+
+                <!-- pagina para salvar cenas e frases interessantes sobre animes -->
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Galeria</a>
+                </li>
+
+                <!-- pagina para catalogar todos os animes assistidos -->
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Catalogação</a>
+                </li>
+
             </ul>
 
         </div>
