renomear uma pagina
renomeia o sandox para consumindo uma api

--- a/front end/pages/Sandbox/publico/chat1.html
+++ b/front end/pages/Sandbox/publico/chat1.html
@@ -30,7 +30,7 @@
         // qnd recebo um evento do tipo mensagem 
         socket.on("mensagem", (msg) => {
             const div = document.getElementById("chat");
-            div.innerHTML += `<p><b>${msg.autor}:</b> ${msg.texto}</p> <br>`;
+            div.innerHTML += `<p><b>${msg.autor}:</b> ${msg.texto}</p>`;
         });
     </script>
 </body>
