Cria novas Paginas de Catalogo e Galeria
Cria o Padrão das paginas de catalogo e galeria

--- a/front end/index.html
+++ b/front end/index.html
@@ -34,12 +34,12 @@
 
                 <!-- pagina para salvar cenas e frases interessantes sobre animes -->
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Galeria</a>
+                    <a href="./pages/Galeria/galeria.html" class="nav-link">Galeria</a>
                 </li>
 
                 <!-- pagina para catalogar todos os animes assistidos -->
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Catalogação</a>
+                    <a href="./pages/Catalogo/catalogo.html" class="nav-link">Catalogação</a>
                 </li>
 
             </ul>
