--- a/front end/pages/Animes/animes.html
+++ b/front end/pages/Animes/animes.html
@@ -35,7 +35,7 @@
 
                 <!-- pagina para salvar cenas e frases interessantes sobre animes -->
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Galeria</a>
+                    <a href="../Galeria/galeria.html" class="nav-link">Galeria</a>
                 </li>
 
                 <!-- pagina para catalogar todos os animes assistidos -->
